Fix spacing and font sizes

--- a/app/src/marketplace/components/Hero/hero.pcss
+++ b/app/src/marketplace/components/Hero/hero.pcss
@@ -2,7 +2,7 @@
 
 .hero {
   background: var(--greyLight3);
-  padding: 3em 0;
+  padding: 2.5em 0;
 }
 
 @media (--md-down) {
@@ -18,5 +18,11 @@
   .heroRow > [class^='col-'] {
     padding-right: 0;
     padding-left: 0;
+  }
+}
+
+@media (--lg-up) {
+  .hero {
+    padding: 4em 0;
   }
 }
